# pydolphin

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  setup.py
.github/workflows/: build-nightly-wheels.yml  build-release-wheels.yml  build-wheel-linux.yml  build-wheel-mac.yml  build-wheel-win.yml  build-wheel-windows.yml  build-wheel.yml  build-wheels.yml  general-wheel.yml  wheels.yml
cdolphin/: dolphin.cpp  script.cpp
cdolphin/include/: dolphin.hpp
pydolphin/: __init__.py  controller.py  dolphin.py  emulation.py  event.py  event_async_creator.py  gui.py  memory.py  registers.py  savestate.py
scripts/: build_python.sh
stubs/pydolphin/: __init__.pyi  controller.pyi  dolphin.pyi  emulation.pyi  event.pyi
